Clean up: Remove FAISS, Render, and unused code
- Remove FAISS dependencies and index_builder.py (now using pgvector)
- Remove Render, Railway, Fly.io, and VPS deployment sections (using Vercel only)
- Simplify topic_tagger.py to use exact match search only
- Update paper_collector.py to remove FAISS index building
- Update requirements.txt to remove faiss-cpu
- Update README.md to reflect pgvector instead of FAISS
- Update COMPANY_CODEBASE.md and github/README.md for new architecture
- Clean up config.yaml.example to remove obsolete FAISS settings

--- a/config.yaml.example
+++ b/config.yaml.example
@@ -36,18 +36,9 @@ gmail:
 # =============================================================================
 
 data:
-  # Directory for storing database and index files
+  # Directory for storing local files
   # Relative to project root, or use absolute path
   data_dir: "web_interface/data"
-
-  # Database filename
-  db_file: "papers.db"
-
-  # FAISS index filename
-  index_file: "papers.index"
-
-  # Paper IDs mapping filename
-  ids_file: "paper_ids.json"
 
 # =============================================================================
 # Web Server Settings
