FAISS/SQLite cleanup complete
- Remove sentence-transformers from requirements.txt (using OpenAI API for embeddings)
- Clean up config.yaml: remove FAISS fields, sanitize API credentials
- Update config.yaml.example with openai section
- Update paper_collection/config.py: remove FAISS path fields
- Update paper_collection/daily_update.py docstring

All paper_collection code now uses PostgreSQL with pgvector exclusively.

--- a/config.yaml.example
+++ b/config.yaml.example
@@ -104,6 +104,19 @@ database:
   url: "postgresql://user:password@host/dbname?sslmode=require"
 
 # =============================================================================
+# OpenAI API Settings (for semantic search embeddings)
+# =============================================================================
+
+openai:
+  # API key for OpenAI (used for generating embeddings)
+  # Get your key from: https://platform.openai.com/api-keys
+  # Or set via environment variable: OPENAI_API_KEY
+  api_key: "your-openai-api-key-here"
+
+  # Embedding model (text-embedding-3-small produces 512 dimensions)
+  embedding_model: "text-embedding-3-small"
+
+# =============================================================================
 # Gemini API Settings (for auto_summary)
 # =============================================================================
 
