Add ruff linter and fix lint errors
- Add ruff.toml configuration (ignore E402 for sys.path modifications)
- Remove unused imports in paper_collector.py, paper_db.py
- Remove unused variable in acm_fetcher.py, web_server.py
- Fix f-string without placeholders in paper_db.py
- Rename paper_parse to paper_metadata
- Update .gitignore to exclude BUCK files

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,10 @@ env/
 *.swo
 *~
 
+# Meta-specific build files (not for GitHub)
+**/BUCK
+BUCK
+
 # Data files (often large or user-specific)
 *.db
 *.index
